--- a/hiragana.html
+++ b/hiragana.html
@@ -5,8 +5,8 @@
 <title>ランダムひらがな生成器</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.14.1/dojo/resources/dojo.css">
-<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/dojo/1.14.1/dijit/themes/claro/claro.css">
+<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.14.1/dojo/resources/dojo.css">
+<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.14.1/dijit/themes/claro/claro.css">
 <style>
 #overlay {
     position: absolute;
