fix: Default symbols are not applied

--- a/general.html
+++ b/general.html
@@ -198,7 +198,7 @@ require([
                 if (allowedSymbols) {
                     groupList.push(allowedSymbols);
                 } else {
-                    groupList.push();
+                    groupList.push(DEFAULT_SYMBOLS);
                 }
             }
             var charPool = groupList.join('');
