--- a/general.html
+++ b/general.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.14.1/dojo/resources/dojo.css">
 <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.14.1/dijit/themes/claro/claro.css">
 <style>
-#wordText, #symbolInput {
+.wordDisplay {
     font-size: 16px;
     font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
@@ -86,7 +86,8 @@
 <div id="container">
     <div id="overlay"><span>Loading...</span></div>
     <h1 id="title">Random Word Generator</h1>
-    <textarea id="wordText" data-dojo-type="dijit/form/SimpleTextarea" rows="3" readonly></textarea>
+    <textarea id="wordText" class="wordDisplay" rows="3" readonly
+        data-dojo-type="dijit/form/SimpleTextarea"></textarea>
     <form id="form" data-dojo-type="dijit/form/Form" method="POST">
         <div id="control">
             <button id="regButton" data-dojo-type="dijit/form/Button">Regenerate</button>
@@ -105,8 +106,8 @@
                 data-dojo-type="dijit/form/CheckBox" checked>Upper Case Letters</label></li>
             <li><label id="symbolLabel"><input id="symbolCheck" name="group" value="s"
                 data-dojo-type="dijit/form/CheckBox" checked>Symbols and choose from</label
-                    ><input id="symbolInput" name="allowedSymbols" data-dojo-type="dijit/form/TextBox"
-                        data-dojo-props="placeHolder:'()_@!?...'"></li>
+                    ><input id="symbolInput" class="wordDisplay" name="allowedSymbols"
+                        data-dojo-type="dijit/form/TextBox" data-dojo-props="placeHolder:'()_@!?...'"></li>
         </ul>
     </form>
 </div>
