fix: Adjust input node position

--- a/general.html
+++ b/general.html
@@ -78,7 +78,12 @@
     vertical-align: text-bottom;
 }
 #symbolLabel {
-    margin-right: .5em;
+    display: inline-block;
+    margin: 0 -13px 8px 0;
+}
+div.dijitTextBox.wordDisplay {
+    margin: -3px 0 0 18px;
+    vertical-align: top;
 }
 </style>
 </head>
