fix: Remove unused properties

--- a/general.html
+++ b/general.html
@@ -112,7 +112,7 @@ div.dijitTextBox.wordDisplay {
             <li><label id="symbolLabel"><input id="symbolCheck" name="group" value="s"
                 data-dojo-type="dijit/form/CheckBox" checked>Symbols and choose from</label
                     ><input id="symbolInput" class="wordDisplay" name="allowedSymbols"
-                        data-dojo-type="dijit/form/TextBox" data-dojo-props="placeHolder:'()_@!?...'"></li>
+                        data-dojo-type="dijit/form/TextBox"></li>
         </ul>
     </form>
 </div>
