--- a/general.html
+++ b/general.html
@@ -229,12 +229,17 @@ require([
         registry.byId('upperCheck').on('change', regenerate);
         symbolCheck.on('change', regenerate);
         symbolInput.on('change', regenerate);
-        // copy
+        // select function
         var textNode = wordText.domNode;
-        var copyButton = registry.byId('copyButton');
-        copyButton.on('click', function() {
+        function selectWholeText() {
             textNode.selectionStart = 0;
             textNode.selectionEnd = wordText.domNode.value.length;
+        }
+        wordText.on('click', selectWholeText);
+        // copy function
+        var copyButton = registry.byId('copyButton');
+        copyButton.on('click', function() {
+            selectWholeText();
             textNode.focus();
             document.execCommand('copy');
             copyButton.focus();
