--- a/hiragana.html
+++ b/hiragana.html
@@ -144,12 +144,17 @@ require([
         // イベントの登録
         slider.on('change', regenerate);
         registry.byId('regButton').on('click', regenerate);
-        // 文字列をコピー
+        // クリックで全選択
         var textNode = wordText.domNode;
-        var copyButton = registry.byId('copyButton');
-        copyButton.on('click', function() {
+        function selectWholeText() {
             textNode.selectionStart = 0;
             textNode.selectionEnd = wordText.domNode.value.length;
+        }
+        wordText.on('click', selectWholeText);
+        // 文字列をコピー
+        var copyButton = registry.byId('copyButton');
+        copyButton.on('click', function() {
+            selectWholeText();
             textNode.focus();
             document.execCommand('copy');
             copyButton.focus();
