fix: コピー後にテキストの選択を解除するようにした
コピー直後にtextarea下の領域をクリックすると
textareaが全選択されていたのを修正。

--- a/general.html
+++ b/general.html
@@ -242,6 +242,8 @@ require([
             selectWholeText();
             textNode.focus();
             document.execCommand('copy');
+            // release selection
+            textNode.selectionStart = textNode.selectionEnd;
             copyButton.focus();
         });
 
