--- a/hiragana.html
+++ b/hiragana.html
@@ -150,7 +150,11 @@ require([
             textNode.selectionStart = 0;
             textNode.selectionEnd = wordText.domNode.value.length;
         }
-        wordText.on('click', selectWholeText);
+        wordText.on('click', function(evt) {
+            // iOSでキーボードが出て来るのを防ぐ
+            evt.preventDefault();
+            selectWholeText();
+        });
         // 文字列をコピー
         var copyButton = registry.byId('copyButton');
         copyButton.on('click', function() {
