fix: Add exclude UI

--- a/general.html
+++ b/general.html
@@ -118,6 +118,10 @@ div.dijitTextBox.wordDisplay {
                 data-dojo-type="dijit/form/CheckBox" checked>Symbols and choose from</label
                     ><input id="symbolInput" class="wordDisplay" name="allowedSymbols"
                         data-dojo-type="dijit/form/TextBox"></li>
+            <li class="listInput"><label><input id="excludeCheck"
+                data-dojo-type="dijit/form/CheckBox">Exclude characters in</label
+                    ><input id="excludeInput" class="wordDisplay" name="exclude"
+                        data-dojo-type="dijit/form/TextBox"></li>
         </ul>
     </form>
 </div>
